# fairdm-docs

./: .gitignore  README.md  pyproject.toml
docs/: conf.py
docs/extensions/: auto_django_model.py
