[tool.poetry]
name = "geoluminate-docs"
version = "0.0.1"
description = "Template code for consistent docs across projects"
authors = ["Sam <samuel.scott.jennings@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Geoluminate/geoluminate-docs"
packages = [{ include = "docs" }]
include = ["LICENSE", "README.md", "requirements.txt"]

classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
sphinx = "^6.1.3"
sphinx-copybutton = "^0.5.1"
sphinxext-opengraph = "^0.8.1"
sphinx-book-theme = "^1.0.0"
myst-parser = "^0.19.1"
sphinx-autobuild = "^2021.3.14"
toml = "^0.10.2"
sphinx-comments = "^0.0.3"
sphinx-autodoc2 = "^0.4.2"
sphinx-tippy = "^0.4.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
invoke = "^2.0.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
preview = true

[tool.isort]
profile = "black"