[tool.poetry]
name = "fairdm-docs"
version = "0.0.1"
description = "Template code for consistent docs across projects"
authors = ["Sam <samuel.scott.jennings@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Geoluminate/geoluminate-docs"
packages = [{ include = "docs" }]
include = ["LICENSE", "README.md", "requirements.txt"]

classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.10"
sphinx = "^8.1.3"
sphinx-copybutton = "^0.5.2"
sphinxext-opengraph = "^0.9.1"
sphinx-book-theme = "^1.1.3"
myst-parser = "^4.0.0"
sphinx-autobuild = "^2024.10.3"
toml = "^0.10.2"
sphinx-comments = "^0.0.3"
sphinx-autodoc2 = "^0.5.0"
sphinx-design = "^0.6.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
invoke = "^2.0.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
preview = true

[tool.isort]
profile = "black"
